# Analista-financiero

./: README.en.md  README.md  pyproject.toml  requirements.txt
notebooks/: example.ipynb
src/: app.py  data.py  model.py  visualization.py
src/data/: test-data-5d.csv  test-data-5y.csv  test-data-6mo.csv
