[project]
name = "analistafinanciero"
version = "0.1.0"
description = ""
authors = [
    {name = "AlexLopEx03"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "yfinance (>=0.2.66,<0.3.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "streamlit (>=1.50.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "app.py", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
